Add two new recipes pages
Added the recipe pages and associated images for the clam dish and the
zucchini dish.

--- a/recipes/orecchiette-con-ragu.html
+++ b/recipes/orecchiette-con-ragu.html
@@ -19,23 +19,23 @@
 
     <p>I created this recipe as an attempt to capture all of the intense meaty flavor of an all-day slow-simmered rag&ugrave; but with the ease and speed of a pressure cooker. Sometimes you just want that Sunday pasta on a Wednesday.</p>
 
-    <p>This recipe takes all of those same flavors and ingredients and concentrats them using the power of a pressure cooker. You can use any pressure cooker you have, but I find electronic pressure cookers like the Instant Pot to be both easiesr and with more consistent results than their stove-top counterparts.</p>
+    <p>This recipe takes all of those same flavors and ingredients and concentratees them using the power of a pressure cooker. You can use any pressure cooker you have, but I find electronic pressure cookers like the Instant Pot to be both easier and with more consistent results than their stove-top counterparts.</p>
 
     <h3>Ingredients</h3>
         <ul>
             <li>1 lb De Cecco Orecchiette (1 box)</li>
-                <li>2 large cans whole San Marzano tomatoes</li>
-                <li>3 lbs pork shoulder</li>
-                <li>1 large carrot</li>
-                <li>1 celery stalk</li>
-                <li>1 large shallot or small yellow onion</li>
-                <li>6 cloves of garlic</li>
-                <li>EVOO</li>
-                <li>Dry white wine</li>
-                <li>Italian seasoning</li>
-                <li>Salt</li>
-                <li>Pepper</li>
-                <li>Red pepper flakes</li>
+            <li>2 large cans whole San Marzano tomatoes</li>
+            <li>3 lbs pork shoulder</li>
+            <li>1 large carrot</li>
+            <li>1 celery stalk</li>
+            <li>1 large shallot or small yellow onion</li>
+            <li>6 cloves of garlic</li>
+            <li>EVOO</li>
+            <li>Dry white wine</li>
+            <li>Italian seasoning</li>
+            <li>Salt</li>
+            <li>Pepper</li>
+            <li>Red pepper flakes</li>
         </ul>
 
     <h3>Directions</h3>
