--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <h1>Odin Recipes</h1>
     <ul>
         <li><a href="./recipes/orecchiette-con-ragu.html">Orecchiette con Rag&ugrave; di Maiale</a></li>
+        <li><a href="./recipes/orecchiette-con-zucchine.html">Orecchiette con Zucchine</a></li>
+        <li><a href="./recipes/linguine-alle-vongole.html">Linguine alle Vongole</a></li>
     </ul>
 </body>
 </html>
