--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Kyle's Italian Recipe Book</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
+    <h1>Kyle's Italian Recipe Book</h1>
     <ul>
         <li><a href="./recipes/orecchiette-con-ragu.html">Orecchiette con Rag&ugrave; di Maiale</a></li>
         <li><a href="./recipes/orecchiette-con-zucchine.html">Orecchiette con Zucchine</a></li>
