Add style.css to project
Added a bunch of janky CSS that is probably incorrect. Some works,
some doesn't. Too tired to fix now. Yay!

--- a/index.html
+++ b/index.html
@@ -3,14 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css" />
     <title>Kyle's Italian Recipe Book</title>
 </head>
 <body>
     <h1>Kyle's Italian Recipe Book</h1>
-    <ul>
-        <li><a href="./recipes/orecchiette-con-ragu.html">Orecchiette con Rag&ugrave; di Maiale</a></li>
-        <li><a href="./recipes/orecchiette-con-zucchine.html">Orecchiette con Zucchine</a></li>
-        <li><a href="./recipes/linguine-alle-vongole.html">Linguine alle Vongole</a></li>
-    </ul>
+    <br>
+    <div class="responsive-boxes">
+        <div class="main-links">
+            <a href="./recipes/orecchiette-con-ragu.html"><span class="notranslate">Orecchiette con Rag&ugrave; di Maiale</span></a>
+        </div>
+        <div class="main-links">
+            <a href="./recipes/orecchiette-con-zucchine.html"><span class="notranslate">Orecchiette con Zucchine</span></a>
+        </div>
+        <div class="main-links">
+            <a href="./recipes/linguine-alle-vongole.html"><span class="notranslate">Linguine alle Vongole</span></a>
+        </div>
+    </div>
 </body>
 </html>
