--- a/recipes/linguine-alle-vongole.html
+++ b/recipes/linguine-alle-vongole.html
@@ -3,14 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../style.css" />
     <title>Linguine alle Vongole</title>
 </head>
 <body>
-    <h1>Linguine alle Vongole</h1>
-    
-    <h2>Author: Kyle Whitcomb</h2>
+    <h1>Kyle's Italian Recipe Book</h1>
 
-    <p><a href="../index.html">Home</a></p>
+    <h2>Linguine alle Vongole</h2>
+    
+    <h3>Author: Kyle Whitcomb</h3>
+
+    <p class="main-links"><a href="../index.html">Home</a></p>
 
     <figure>
         <img src="../img/linguine-alle-vongole.jpg" width="800" height="600" alt="A plate of linguine pasta with a clams in a white wine sauce.">
