--- a/recipes/orecchiette-con-ragu.html
+++ b/recipes/orecchiette-con-ragu.html
@@ -3,14 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../style.css" />
     <title>Orecchiette con Rag&ugrave; di Maiale</title>
 </head>
 <body>
-    <h1>Orecchiette con Rag&ugrave; di Maiale</h1>
-    
-    <h2>Author: Kyle Whitcomb</h2>
+    <h1>Kyle's Italian Recipe Book</h1>
 
-    <p><a href="../index.html">Home</a></p>
+    <h2>Orecchiette con Rag&ugrave; di Maiale</h2>
+    
+    <h3>Author: Kyle Whitcomb</h3>
+
+    <p class="main-links"><a href="../index.html">Home</a></p>
 
     <figure>
         <img src="../img/orecchiette-con-ragu.jpg" width="800" height="600" alt="A plate of orecchiette pasta with a pork and tomato sauce and parmigiano reggiano cheese.">
